--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "connect": "3.0.0-rc.1",
         "connect-slashes": "1.2.0",
         "cookie-parser": "1.0.1",
-        "downsize": "git+ssh://git@github.com:stevehansell/Downsize.git#append_without_html",
+        "downsize": "git+https://github.com/stevehansell/Downsize.git",
         "express": "4.1.1",
         "express-hbs": "0.7.10",
         "express-session": "1.0.4",
